<resources>
    <string name="app_name">NihongoCommunity</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <string name="add_post">Add Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cari_diskusi_disini">Cari diskusi disini...</string>
    <string name="you_can_filter_what_topic_do_you_want_here">You can filter what topic do you want here</string>
    <string name="title">Title</string>
    <string name="theme">Theme</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="posted_by">Posted By</string>
    <string name="comments">Comments</string>
    <string name="add_comment_here">Add comment here...</string>
    <string name="you_can_add_some_image_here">You can add some image here!</string>
</resources>